@@ -41,22 +41,22 @@ define( function( require ) {
 
     var updateFormula = function( solute ) {
       // use solute formula
-      if ( solution.volume.value === 0 ) {
+      if ( solution.volume === 0 ) {
         formulaNode.text = "";
       }
-      else if ( solution.concentration.value === 0 ) {
+      else if ( solution.concentration === 0 ) {
         formulaNode.text = MSymbols.WATER;
       }
       else {
-        formulaNode.text = solution.solute.value.formula;
+        formulaNode.text = solution.solute.formula;
       }
       // center formula in background
       formulaNode.centerX = backgroundNode.centerX;
       formulaNode.centerY = backgroundNode.centerY;
     };
-    solution.solute.link( updateFormula );
-    solution.volume.link(  updateFormula );
-    solution.concentration.link( updateFormula );
+    solution.soluteProperty.link( updateFormula );
+    solution.volumeProperty.link(  updateFormula );
+    solution.concentrationProperty.link( updateFormula );
   }
 
   inherit( BeakerLabelNode, Node );
