@@ -59,7 +59,7 @@ define( function( require ) {
         // add particles
         var numberToAdd = numberOfParticles - particlesParent.getChildrenCount();
         for ( var i = 0; i < numberToAdd; i++ ) {
-          particleNode = new PrecipitateParticleNode( solution.solute.value );
+          particleNode = new PrecipitateParticleNode( solution.solute );
           particlesParent.addChild( particleNode );
           particleNode.translation = thisNode.getRandomOffset( particleNode );
         }
@@ -76,20 +76,20 @@ define( function( require ) {
 
     // Updates the debug output to show how we're mapping saturation to number of particles.
     var updateValue = function() {
-      var precipitateAmount = solution.precipitateAmount.value;
+      var precipitateAmount = solution.precipitateAmount;
       var numberOfParticles = thisNode.getNumberOfParticles();
       // developer only, no i18n required
       valueNode.text = "dev: precipitate = " + precipitateAmount.toFixed( 4 ) + " mol, " + numberOfParticles + " particles";
     };
 
     // when the saturation changes, update the number of precipitate particles
-    solution.precipitateAmount.link( function( precipitateAmount ) {
+    solution.precipitateAmountProperty.link( function() {
       updateParticles();
       updateValue();
     } );
 
     // when the solute changes, remove all particles and create new particles for the solute
-    solution.solute.link( function( solute ) {
+    solution.soluteProperty.link( function() {
       removeAllParticles();
       updateParticles();
       updateValue();
@@ -104,8 +104,8 @@ define( function( require ) {
 
   // Gets the number of particles used to represent the solution's saturation.
   PrecipitateNode.prototype.getNumberOfParticles = function() {
-    var numberOfParticles = Math.floor( this.solution.solute.value.particlesPerMole * this.solution.precipitateAmount.value );
-    if ( numberOfParticles === 0 && this.solution.precipitateAmount.value > 0 ) {
+    var numberOfParticles = Math.floor( this.solution.solute.particlesPerMole * this.solution.precipitateAmount );
+    if ( numberOfParticles === 0 && this.solution.precipitateAmount > 0 ) {
       numberOfParticles = 1;
     }
     return numberOfParticles;
