@@ -121,7 +121,7 @@ define( function( require ) {
 
   inherit( ThumbDragHandler, SimpleDragHandler );
 
-  function VerticalSlider( title, subtitle, minLabel, maxLabel, trackSize, property, range, decimalPlaces, units, valuesVisible ) {
+  function VerticalSlider( title, subtitle, minLabel, maxLabel, trackSize, property, range, decimalPlaces, units, valuesVisibleProperty ) {
 
     var thisNode = this;
     Node.call( thisNode );
@@ -129,8 +129,8 @@ define( function( require ) {
     // nodes
     var titleNode = new HTMLText( title, { font: TITLE_FONT } );
     var subtitleNode = new Text( subtitle, { font: SUBTITLE_FONT } );
-    var minNode = new DualLabelNode( range.min.toFixed( range.min === 0 ? 0 : RANGE_DECIMAL_PLACES ), minLabel, valuesVisible, RANGE_FONT );
-    var maxNode = new DualLabelNode( range.max.toFixed( RANGE_DECIMAL_PLACES ), maxLabel, valuesVisible, RANGE_FONT );
+    var minNode = new DualLabelNode( range.min.toFixed( range.min === 0 ? 0 : RANGE_DECIMAL_PLACES ), minLabel, valuesVisibleProperty, RANGE_FONT );
+    var maxNode = new DualLabelNode( range.max.toFixed( RANGE_DECIMAL_PLACES ), maxLabel, valuesVisibleProperty, RANGE_FONT );
     var trackNode = new Track( trackSize, property, range, decimalPlaces );
     var xMargin = 7, yMargin = 7, cornerRadius = 10;
     var backgroundNode = new Rectangle( -xMargin, -yMargin, trackSize.width + ( 2 * xMargin ), trackSize.height + ( 2 * yMargin ), cornerRadius, cornerRadius,
@@ -179,7 +179,7 @@ define( function( require ) {
     } );
 
     // switch between quantitative and qualitative display
-    valuesVisible.link( function( visible ) {
+    valuesVisibleProperty.link( function( visible ) {
       valueNode.setVisible( visible );
       updateValuePosition();
     } );
